--- a/custom-logo.html
+++ b/custom-logo.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Custom Logo - Blackmatter</title>
-  <link rel="icon" href="../images/B.png" type="image/png" sizes="32x32">
+  <link rel="icon" href="images/B.png" type="image/png" sizes="32x32">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-black text-gray-200">
@@ -13,7 +13,7 @@
   <nav class="sticky top-0 z-50 bg-black/40 backdrop-blur-xl border-b border-white/10">
     <div class="max-w-7xl mx-auto px-4 h-14 flex items-center justify-between">
       <a href="index.html#home" class="font-semibold tracking-widest">
-        <img src="../images/logo.png" class="h-9 w-auto" alt="Blackmatter Logo">
+        <img src="images/logo.png" class="h-9 w-auto" alt="Blackmatter Logo">
       </a>
       <a href="index.html#the-archive" class="text-sm hover:text-white">← Back</a>
     </div>
@@ -22,7 +22,7 @@
   <!-- HERO / HEADER -->
   <header class="relative overflow-hidden">
     <div class="absolute inset-0">
-      <img src="../images/Background.jpg" class="w-full h-full object-cover opacity-50" alt="">
+      <img src="images/Background.jpg" class="w-full h-full object-cover opacity-50" alt="">
       <div class="absolute inset-0 bg-gradient-to-b from-black/50 to-black"></div>
     </div>
     <div class="relative max-w-7xl mx-auto px-4 py-14">
@@ -77,7 +77,7 @@
       <article class="card group relative rounded-2xl border border-white/10 bg-white/5 backdrop-blur-md shadow-[0_0_40px_rgba(99,102,241,0.08)] hover:shadow-[0_0_60px_rgba(99,102,241,0.18)] overflow-hidden transition-transform hover:scale-[1.02]"
         data-title="Metallic" data-category="metallic" data-price="100" data-date="2025-08-20">
         <span class="badge-new hidden absolute right-2 top-2 z-20 text-[10px] italic font-bold text-red-600">NEW</span>
-        <img src="../images/Background.jpg" alt="Metallic" class="w-full h-56 object-cover group-hover:scale-105 transition-transform duration-500">
+        <img src="images/Background.jpg" alt="Metallic" class="w-full h-56 object-cover group-hover:scale-105 transition-transform duration-500">
         <div class="p-5 space-y-2">
           <h3 class="font-semibold text-lg">Metallic</h3>
           <p class="text-gray-400 text-sm">Format: JPG, PNG, SVG. 1x revisi minor. Estimasi 2–4 hari.</p>
@@ -86,7 +86,7 @@
             <span class="font-bold text-white">IDR 100K</span>
             <div class="flex gap-2">
               <button class="orderBtn text-xs px-3 py-2 rounded-md bg-white text-black font-semibold hover:opacity-90" data-product="Metallic" data-price="100">Order</button>
-              <button class="text-xs px-3 py-2 rounded-md bg-white/10 hover:bg-white/20" onclick="openPreview('../images/Background.jpg','Metallic')">Preview</button>
+              <button class="text-xs px-3 py-2 rounded-md bg-white/10 hover:bg-white/20" onclick="openPreview('images/Background.jpg','Metallic')">Preview</button>
             </div>
           </div>
         </div>
@@ -96,7 +96,7 @@
       <article class="card group relative rounded-2xl border border-white/10 bg-white/5 backdrop-blur-md shadow-[0_0_40px_rgba(99,102,241,0.08)] hover:shadow-[0_0_60px_rgba(99,102,241,0.18)] overflow-hidden transition-transform hover:scale-[1.02]"
         data-title="Modern" data-category="modern" data-price="50" data-date="2025-08-24">
         <span class="badge-new hidden absolute right-2 top-2 z-20 text-[10px] italic font-bold text-red-600">NEW</span>
-        <img src="../images/modern.jpg" alt="Modern" class="w-full h-56 object-cover group-hover:scale-105 transition-transform duration-500">
+        <img src="images/modern.jpg" alt="Modern" class="w-full h-56 object-cover group-hover:scale-105 transition-transform duration-500">
         <div class="p-5 space-y-2">
           <h3 class="font-semibold text-lg">Modern</h3>
           <p class="text-gray-400 text-sm">Format: JPG, PNG, SVG. 1x revisi minor. Estimasi 1–3 hari.</p>
@@ -105,7 +105,7 @@
             <span class="font-bold text-white">IDR 50K</span>
             <div class="flex gap-2">
               <button class="orderBtn text-xs px-3 py-2 rounded-md bg-white text-black font-semibold hover:opacity-90" data-product="Modern" data-price="50">Order</button>
-              <button class="text-xs px-3 py-2 rounded-md bg-white/10 hover:bg-white/20" onclick="openPreview('../images/modern.jpg','Modern')">Preview</button>
+              <button class="text-xs px-3 py-2 rounded-md bg-white/10 hover:bg-white/20" onclick="openPreview('images/modern.jpg','Modern')">Preview</button>
             </div>
           </div>
         </div>
@@ -115,7 +115,7 @@
       <article class="card group relative rounded-2xl border border-white/10 bg-white/5 backdrop-blur-md shadow-[0_0_40px_rgba(99,102,241,0.08)] hover:shadow-[0_0_60px_rgba(99,102,241,0.18)] overflow-hidden transition-transform hover:scale-[1.02]"
         data-title="Custom" data-category="custom" data-price="999" data-date="2025-08-10">
         <span class="badge-new hidden absolute right-2 top-2 z-20 text-[10px] italic font-bold text-red-600">NEW</span>
-        <img src="../images/logo2.jpg" alt="Custom" class="w-full h-56 object-cover group-hover:scale-105 transition-transform duration-500">
+        <img src="images/logo2.jpg" alt="Custom" class="w-full h-56 object-cover group-hover:scale-105 transition-transform duration-500">
         <div class="p-5 space-y-2">
           <h3 class="font-semibold text-lg">Custom</h3>
           <p class="text-gray-400 text-sm">Format: JPG, PNG, SVG. 1x revisi minor. Estimasi (Adapt).</p>
@@ -124,7 +124,7 @@
             <span class="font-bold text-white">IDR (Adapt)</span>
             <div class="flex gap-2">
               <button class="orderBtn text-xs px-3 py-2 rounded-md bg-white text-black font-semibold hover:opacity-90" data-product="Custom" data-price="Adapt">Order</button>
-              <button class="text-xs px-3 py-2 rounded-md bg-white/10 hover:bg-white/20" onclick="openPreview('../images/logo2.jpg','Custom')">Preview</button>
+              <button class="text-xs px-3 py-2 rounded-md bg-white/10 hover:bg-white/20" onclick="openPreview('images/logo2.jpg','Custom')">Preview</button>
             </div>
           </div>
         </div>
