--- a/outfit.html
+++ b/outfit.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Outfit – Blackmatter</title>
-  <link rel="icon" href="../images/B.png" type="image/png" sizes="32x32">
+  <link rel="icon" href="images/B.png" type="image/png" sizes="32x32">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-black text-gray-200">
@@ -13,7 +13,7 @@
   <nav class="sticky top-0 z-50 bg-black/60 backdrop-blur-xl border-b border-white/10">
     <div class="max-w-7xl mx-auto h-14 px-4 flex items-center justify-between">
       <a href="index.html#home" class="flex items-center gap-2">
-        <img src="../images/logo.png" class="h-8 w-auto" alt="Blackmatter">
+        <img src="images/logo.png" class="h-8 w-auto" alt="Blackmatter">
       </a>
       <a href="index.html#the-archive" class="text-sm px-3 py-1 rounded-md bg-white/10 hover:bg-white/20">← Back</a>
     </div>
@@ -21,7 +21,7 @@
 
   <!-- HERO / atmospheric background -->
   <header class="relative overflow-hidden border-b border-white/10">
-    <img src="../images/outfit-hero.jpg" alt="" class="absolute inset-0 w-full h-full object-cover opacity-25">
+    <img src="images/outfit-hero.jpg" alt="" class="absolute inset-0 w-full h-full object-cover opacity-25">
     <div class="absolute inset-0 bg-[radial-gradient(ellipse_at_bottom,rgba(255,255,255,0.12)_0%,transparent_45%)]"></div>
     <div class="relative max-w-7xl mx-auto px-4 py-14">
       <h1 class="text-3xl sm:text-4xl font-extrabold tracking-wide">OUTFIT</h1>
@@ -98,9 +98,9 @@
             <div class="flex gap-4 min-w-max pr-2">
               <!-- Card template popular -->
               <article class="pop card w-56 shrink-0 rounded-xl border border-white/10 bg-white/[0.04] backdrop-blur-md overflow-hidden cursor-pointer"
-                       data-title="Hoodie Eclipse" data-price="529" data-date="2025-08-26" data-cat="hoodie" data-img="../images/outfit-hoodie1.jpg">
+                       data-title="Hoodie Eclipse" data-price="529" data-date="2025-08-26" data-cat="hoodie" data-img="images/outfit-hoodie1.jpg">
                 <div class="relative h-36">
-                  <img src="../images/outfit-hoodie1.jpg" class="absolute inset-0 w-full h-full object-cover" alt="">
+                  <img src="images/outfit-hoodie1.jpg" class="absolute inset-0 w-full h-full object-cover" alt="">
                 </div>
                 <div class="p-3">
                   <p class="text-sm">Hoodie Eclipse</p>
@@ -112,9 +112,9 @@
               </article>
 
               <article class="pop card w-56 shrink-0 rounded-xl border border-white/10 bg-white/[0.04] backdrop-blur-md overflow-hidden cursor-pointer"
-                       data-title="T-Shirt Relic" data-price="179" data-date="2025-08-20" data-cat="tee" data-img="../images/outfit-tee1.jpg">
+                       data-title="T-Shirt Relic" data-price="179" data-date="2025-08-20" data-cat="tee" data-img="images/outfit-tee1.jpg">
                 <div class="relative h-36">
-                  <img src="../images/outfit-tee1.jpg" class="absolute inset-0 w-full h-full object-cover" alt="">
+                  <img src="images/outfit-tee1.jpg" class="absolute inset-0 w-full h-full object-cover" alt="">
                 </div>
                 <div class="p-3">
                   <p class="text-sm">T-Shirt Relic</p>
@@ -126,9 +126,9 @@
               </article>
 
               <article class="pop card w-56 shrink-0 rounded-xl border border-white/10 bg-white/[0.04] backdrop-blur-md overflow-hidden cursor-pointer"
-                       data-title="Umbrella Drip" data-price="239" data-date="2025-08-18" data-cat="bag" data-img="../images/outfit-umbrella.jpg">
+                       data-title="Umbrella Drip" data-price="239" data-date="2025-08-18" data-cat="bag" data-img="images/outfit-umbrella.jpg">
                 <div class="relative h-36">
-                  <img src="../images/outfit-umbrella.jpg" class="absolute inset-0 w-full h-full object-cover" alt="">
+                  <img src="images/outfit-umbrella.jpg" class="absolute inset-0 w-full h-full object-cover" alt="">
                 </div>
                 <div class="p-3">
                   <p class="text-sm">Umbrella Drip</p>
@@ -140,9 +140,9 @@
               </article>
 
               <article class="pop card w-56 shrink-0 rounded-xl border border-white/10 bg-white/[0.04] backdrop-blur-md overflow-hidden cursor-pointer"
-                       data-title="Cap Nebula" data-price="149" data-date="2025-08-12" data-cat="cap" data-img="../images/outfit-cap1.jpg">
+                       data-title="Cap Nebula" data-price="149" data-date="2025-08-12" data-cat="cap" data-img="images/outfit-cap1.jpg">
                 <div class="relative h-36">
-                  <img src="../images/outfit-cap1.jpg" class="absolute inset-0 w-full h-full object-cover" alt="">
+                  <img src="images/outfit-cap1.jpg" class="absolute inset-0 w-full h-full object-cover" alt="">
                 </div>
                 <div class="p-3">
                   <p class="text-sm">Cap Nebula</p>
@@ -166,9 +166,9 @@
           <div id="grid" class="grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-3 gap-6">
             <!-- item cards -->
             <article class="item card rounded-2xl border border-white/10 bg-white/[0.04] backdrop-blur-md overflow-hidden cursor-pointer"
-                     data-title="T-Shirt Eclipse" data-price="199" data-date="2025-08-26" data-cat="tee" data-img="../images/outfit-tee2.jpg">
+                     data-title="T-Shirt Eclipse" data-price="199" data-date="2025-08-26" data-cat="tee" data-img="images/outfit-tee2.jpg">
               <div class="relative h-56">
-                <img src="../images/outfit-tee2.jpg" class="absolute inset-0 w-full h-full object-cover" alt="">
+                <img src="images/outfit-tee2.jpg" class="absolute inset-0 w-full h-full object-cover" alt="">
                 <span class="absolute right-2 top-2 text-[10px] italic font-bold text-red-600">NEW</span>
               </div>
               <div class="p-4">
@@ -181,9 +181,9 @@
             </article>
 
             <article class="item card rounded-2xl border border-white/10 bg-white/[0.04] backdrop-blur-md overflow-hidden cursor-pointer"
-                     data-title="Hoodie Rift" data-price="559" data-date="2025-08-21" data-cat="hoodie" data-img="../images/outfit-hoodie2.jpg">
+                     data-title="Hoodie Rift" data-price="559" data-date="2025-08-21" data-cat="hoodie" data-img="images/outfit-hoodie2.jpg">
               <div class="relative h-56">
-                <img src="../images/outfit-hoodie2.jpg" class="absolute inset-0 w-full h-full object-cover" alt="">
+                <img src="images/outfit-hoodie2.jpg" class="absolute inset-0 w-full h-full object-cover" alt="">
               </div>
               <div class="p-4">
                 <div class="flex items-center justify-between">
@@ -195,9 +195,9 @@
             </article>
 
             <article class="item card rounded-2xl border border-white/10 bg-white/[0.04] backdrop-blur-md overflow-hidden cursor-pointer"
-                     data-title="Tote Gravity" data-price="179" data-date="2025-08-10" data-cat="bag" data-img="../images/outfit-bag.jpg">
+                     data-title="Tote Gravity" data-price="179" data-date="2025-08-10" data-cat="bag" data-img="images/outfit-bag.jpg">
               <div class="relative h-56">
-                <img src="../images/outfit-bag.jpg" class="absolute inset-0 w-full h-full object-cover" alt="">
+                <img src="images/outfit-bag.jpg" class="absolute inset-0 w-full h-full object-cover" alt="">
               </div>
               <div class="p-4">
                 <div class="flex items-center justify-between">
@@ -209,9 +209,9 @@
             </article>
 
             <article class="item card rounded-2xl border border-white/10 bg-white/[0.04] backdrop-blur-md overflow-hidden cursor-pointer"
-                     data-title="Cap Mono" data-price="129" data-date="2025-08-05" data-cat="cap" data-img="../images/outfit-cap2.jpg">
+                     data-title="Cap Mono" data-price="129" data-date="2025-08-05" data-cat="cap" data-img="images/outfit-cap2.jpg">
               <div class="relative h-56">
-                <img src="../images/profil3.png" class="absolute inset-0 w-full h-full object-cover" alt="">
+                <img src="images/profil3.png" class="absolute inset-0 w-full h-full object-cover" alt="">
               </div>
               <div class="p-4">
                 <div class="flex items-center justify-between">
@@ -223,9 +223,9 @@
             </article>
 
             <article class="item card rounded-2xl border border-white/10 bg-white/[0.04] backdrop-blur-md overflow-hidden cursor-pointer"
-                     data-title="Hoodie Relic" data-price="499" data-date="2025-07-28" data-cat="hoodie" data-img="../images/outfit-hoodie3.jpg">
+                     data-title="Hoodie Relic" data-price="499" data-date="2025-07-28" data-cat="hoodie" data-img="images/outfit-hoodie3.jpg">
               <div class="relative h-56">
-                <img src="../images/profil4.jpg" class="absolute inset-0 w-full h-full object-cover" alt="">
+                <img src="images/profil4.jpg" class="absolute inset-0 w-full h-full object-cover" alt="">
               </div>
               <div class="p-4">
                 <div class="flex items-center justify-between">
@@ -237,9 +237,9 @@
             </article>
 
             <article class="item card rounded-2xl border border-white/10 bg-white/[0.04] backdrop-blur-md overflow-hidden cursor-pointer"
-                     data-title="T-Shirt Void" data-price="189" data-date="2025-07-20" data-cat="tee" data-img="../images/outfit-tee3.jpg">
+                     data-title="T-Shirt Void" data-price="189" data-date="2025-07-20" data-cat="tee" data-img="images/outfit-tee3.jpg">
               <div class="relative h-56">
-                <img src="../images/logo2.jpg" class="absolute inset-0 w-full h-full object-cover" alt="">
+                <img src="images/logo2.jpg" class="absolute inset-0 w-full h-full object-cover" alt="">
               </div>
               <div class="p-4">
                 <div class="flex items-center justify-between">
