--- a/index.html
+++ b/index.html
@@ -317,6 +317,101 @@
       </a>
     </div>
   </section>
+<!-- ====================== SPONSORS ====================== -->
+<section id="sponsors" class="relative border-t border-white/10 bg-black">
+  <!-- subtle glow -->
+  <div class="pointer-events-none absolute inset-0 bg-gradient-to-b from-black via-[#0b0b13] to-black"></div>
+
+  <div class="relative max-w-7xl mx-auto px-4 py-12 sm:py-16">
+    <div class="text-center mb-8">
+      <p class="text-xs tracking-[0.2em] text-gray-400 uppercase">Trusted by</p>
+      <h3 class="mt-2 text-2xl sm:text-3xl font-extrabold text-white">Our Sponsors & Partners</h3>
+      <p class="mt-2 text-sm text-gray-400">Brand yang mendukung perjalanan BLACKMATTER</p>
+    </div>
+
+    <!-- STATIC GRID (mobile & fallback) -->
+    <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-5 gap-6 sm:gap-10 md:gap-12">
+      <a href="https://www.instagram.com/sponsor1" target="_blank" rel="noopener noreferrer"
+         class="group flex items-center justify-center h-16 sm:h-20 rounded-xl border border-white/10 bg-white/[0.02] hover:bg-white/[0.04] transition">
+        <img src="images/sponsors/logo-1.png" alt="Sponsor 1"
+             class="max-h-8 sm:max-h-10 opacity-70 group-hover:opacity-100 grayscale group-hover:grayscale-0 transition">
+      </a>
+      <a href="https://www.instagram.com/sponsor2" target="_blank" rel="noopener noreferrer"
+         class="group flex items-center justify-center h-16 sm:h-20 rounded-xl border border-white/10 bg-white/[0.02] hover:bg-white/[0.04] transition">
+        <img src="images/sponsors/logo-2.png" alt="Sponsor 2"
+             class="max-h-8 sm:max-h-10 opacity-70 group-hover:opacity-100 grayscale group-hover:grayscale-0 transition">
+      </a>
+      <a href="https://www.instagram.com/sponsor3" target="_blank" rel="noopener noreferrer"
+         class="group flex items-center justify-center h-16 sm:h-20 rounded-xl border border-white/10 bg-white/[0.02] hover:bg-white/[0.04] transition">
+        <img src="images/sponsors/logo-3.png" alt="Sponsor 3"
+             class="max-h-8 sm:max-h-10 opacity-70 group-hover:opacity-100 grayscale group-hover:grayscale-0 transition">
+      </a>
+      <a href="https://www.instagram.com/sponsor4" target="_blank" rel="noopener noreferrer"
+         class="group flex items-center justify-center h-16 sm:h-20 rounded-xl border border-white/10 bg-white/[0.02] hover:bg-white/[0.04] transition">
+        <img src="images/sponsors/logo-4.png" alt="Sponsor 4"
+             class="max-h-8 sm:max-h-10 opacity-70 group-hover:opacity-100 grayscale group-hover:grayscale-0 transition">
+      </a>
+      <a href="https://www.instagram.com/sponsor5" target="_blank" rel="noopener noreferrer"
+         class="group flex items-center justify-center h-16 sm:h-20 rounded-xl border border-white/10 bg-white/[0.02] hover:bg-white/[0.04] transition">
+        <img src="images/sponsors/logo-5.png" alt="Sponsor 5"
+             class="max-h-8 sm:max-h-10 opacity-70 group-hover:opacity-100 grayscale group-hover:grayscale-0 transition">
+      </a>
+    </div>
+
+    <!-- MARQUEE (desktop) -->
+    <div class="mt-10 hidden md:block">
+      <div class="relative overflow-hidden border border-white/10 rounded-2xl bg-white/[0.02]">
+        <div class="marquee flex items-center gap-12 p-6">
+          <a href="https://www.instagram.com/sponsor1" target="_blank" rel="noopener noreferrer">
+            <img src="images/sponsors/logo-1.png" alt="Sponsor 1" class="h-8 opacity-60 hover:opacity-100 grayscale hover:grayscale-0 transition">
+          </a>
+          <a href="https://www.instagram.com/sponsor2" target="_blank" rel="noopener noreferrer">
+            <img src="images/sponsors/logo-2.png" alt="Sponsor 2" class="h-8 opacity-60 hover:opacity-100 grayscale hover:grayscale-0 transition">
+          </a>
+          <a href="https://www.instagram.com/sponsor3" target="_blank" rel="noopener noreferrer">
+            <img src="images/sponsors/logo-3.png" alt="Sponsor 3" class="h-8 opacity-60 hover:opacity-100 grayscale hover:grayscale-0 transition">
+          </a>
+          <a href="https://www.instagram.com/sponsor4" target="_blank" rel="noopener noreferrer">
+            <img src="images/sponsors/logo-4.png" alt="Sponsor 4" class="h-8 opacity-60 hover:opacity-100 grayscale hover:grayscale-0 transition">
+          </a>
+          <a href="https://www.instagram.com/sponsor5" target="_blank" rel="noopener noreferrer">
+            <img src="images/sponsors/logo-5.png" alt="Sponsor 5" class="h-8 opacity-60 hover:opacity-100 grayscale hover:grayscale-0 transition">
+          </a>
+
+          <!-- duplikasi supaya marquee jalan mulus -->
+          <a href="https://www.instagram.com/sponsor1" target="_blank" rel="noopener noreferrer">
+            <img src="images/sponsors/logo-1.png" alt="Sponsor 1" class="h-8 opacity-60 hover:opacity-100 grayscale hover:grayscale-0 transition">
+          </a>
+          <a href="https://www.instagram.com/sponsor2" target="_blank" rel="noopener noreferrer">
+            <img src="images/sponsors/logo-2.png" alt="Sponsor 2" class="h-8 opacity-60 hover:opacity-100 grayscale hover:grayscale-0 transition">
+          </a>
+          <a href="https://www.instagram.com/sponsor3" target="_blank" rel="noopener noreferrer">
+            <img src="images/sponsors/logo-3.png" alt="Sponsor 3" class="h-8 opacity-60 hover:opacity-100 grayscale hover:grayscale-0 transition">
+          </a>
+          <a href="https://www.instagram.com/sponsor4" target="_blank" rel="noopener noreferrer">
+            <img src="images/sponsors/logo-4.png" alt="Sponsor 4" class="h-8 opacity-60 hover:opacity-100 grayscale hover:grayscale-0 transition">
+          </a>
+          <a href="https://www.instagram.com/sponsor5" target="_blank" rel="noopener noreferrer">
+            <img src="images/sponsors/logo-5.png" alt="Sponsor 5" class="h-8 opacity-60 hover:opacity-100 grayscale hover:grayscale-0 transition">
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- marquee styles -->
+  <style>
+    @keyframes sponsors-marquee {
+      0%   { transform: translateX(0); }
+      100% { transform: translateX(-50%); }
+    }
+    #sponsors .marquee {
+      width: 200%;
+      animation: sponsors-marquee 28s linear infinite;
+    }
+    #sponsors .marquee:hover { animation-play-state: paused; }
+  </style>
+</section>
 
   <!-- FOOTER -->
   <footer class="py-2 text-center bg-black border-t border-gray-800">
@@ -358,3 +453,4 @@
   </script>
 </body>
 </html>
+
