--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-5 gap-6 sm:gap-10 md:gap-12">
       <a href="https://www.instagram.com/sponsor1" target="_blank" rel="noopener noreferrer"
          class="group flex items-center justify-center h-16 sm:h-20 rounded-xl border border-white/10 bg-white/[0.02] hover:bg-white/[0.04] transition">
-        <img src="images/sponsors/logo-1.png" alt="Sponsor 1"
+        <img src="images/sponsors/cuanity.png" alt="Sponsor 1"
              class="max-h-8 sm:max-h-10 opacity-70 group-hover:opacity-100 grayscale group-hover:grayscale-0 transition">
       </a>
       <a href="https://www.instagram.com/sponsor2" target="_blank" rel="noopener noreferrer"
@@ -453,4 +453,5 @@
   </script>
 </body>
 </html>
+
 
