--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
       <div class="relative overflow-hidden border border-white/10 rounded-2xl bg-white/[0.02]">
         <div class="marquee flex items-center gap-12 p-6">
           <a href="https://www.instagram.com/sponsor1" target="_blank" rel="noopener noreferrer">
-            <img src="images/sponsors/logo-1.png" alt="Sponsor 1" class="h-8 opacity-60 hover:opacity-100 grayscale hover:grayscale-0 transition">
+            <img src="images/sponsors/cuanity.png" alt="Sponsor 1" class="h-8 opacity-60 hover:opacity-100 grayscale hover:grayscale-0 transition">
           </a>
           <a href="https://www.instagram.com/sponsor2" target="_blank" rel="noopener noreferrer">
             <img src="images/sponsors/logo-2.png" alt="Sponsor 2" class="h-8 opacity-60 hover:opacity-100 grayscale hover:grayscale-0 transition">
@@ -380,7 +380,7 @@
 
           <!-- duplikasi supaya marquee jalan mulus -->
           <a href="https://www.instagram.com/sponsor1" target="_blank" rel="noopener noreferrer">
-            <img src="images/sponsors/logo-1.png" alt="Sponsor 1" class="h-8 opacity-60 hover:opacity-100 grayscale hover:grayscale-0 transition">
+            <img src="images/sponsors/cuanity.png" alt="Sponsor 1" class="h-8 opacity-60 hover:opacity-100 grayscale hover:grayscale-0 transition">
           </a>
           <a href="https://www.instagram.com/sponsor2" target="_blank" rel="noopener noreferrer">
             <img src="images/sponsors/logo-2.png" alt="Sponsor 2" class="h-8 opacity-60 hover:opacity-100 grayscale hover:grayscale-0 transition">
@@ -453,5 +453,6 @@
   </script>
 </body>
 </html>
+
 
 
