--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
     <!-- STATIC GRID (mobile & fallback) -->
     <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-5 gap-6 sm:gap-10 md:gap-12">
-      <a href="https://www.instagram.com/sponsor1" target="_blank" rel="noopener noreferrer"
+      <a href="https://www.instagram.com/cuanity.co?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==/sponsor1" target="_blank" rel="noopener noreferrer"
          class="group flex items-center justify-center h-16 sm:h-20 rounded-xl border border-white/10 bg-white/[0.02] hover:bg-white/[0.04] transition">
         <img src="images/cuanity.png?v=2" onerror="this.onerror=null;this.src='images/cuanity.jpg?v=2';" alt="Sponsor 1"
              class="max-h-8 sm:max-h-10 opacity-70 group-hover:opacity-100 grayscale group-hover:grayscale-0 transition">
@@ -362,7 +362,7 @@
     <div class="mt-10 hidden md:block">
       <div class="relative overflow-hidden border border-white/10 rounded-2xl bg-white/[0.02]">
         <div class="marquee flex items-center gap-12 p-6">
-          <a href="https://www.instagram.com/sponsor1" target="_blank" rel="noopener noreferrer">
+          <a href="https://www.instagram.com/cuanity.co?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==/sponsor1" target="_blank" rel="noopener noreferrer">
             <img src="images/cuanity.png?v=2" onerror="this.onerror=null;this.src='images/cuanity.jpg?v=2';" alt="Sponsor 1" class="h-8 opacity-60 hover:opacity-100 grayscale hover:grayscale-0 transition">
           </a>
           <a href="https://www.instagram.com/sponsor2" target="_blank" rel="noopener noreferrer">
@@ -453,3 +453,4 @@
   </script>
 </body>
 </html>
+
