--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <li><a href="#home" class="block px-3 py-2 rounded-lg hover:bg-white/10">Home</a></li>
           <li><a href="#profile" class="block px-3 py-2 rounded-lg hover:bg-white/10">Profile</a></li>
           <li><a href="#the-archive" class="block px-3 py-2 rounded-lg hover:bg-white/10">The Archive</a></li>
-          <li><a href="#collab" class="block px-3 py-2 rounded-lg hover:bg-white/10">Collab</a></li>
+          <li><a href="#" class="block px-3 py-2 rounded-lg hover:bg-white/10">Collab</a></li>
           <li><a href="#contact" class="block px-3 py-2 rounded-lg hover:bg-white/10">Contact</a></li>
         </ul>
       </div>
@@ -237,7 +237,7 @@
 
     <div class="relative max-w-6xl mx-auto">
       <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-8 sm:mb-12 text-center tracking-wide">
-        Collab — <span class="text-white">BLACKMATTER</span> × <span class="text-white">graffiello_v</span>
+      <span class="text-white">Blackmatter</span> × <span class="text-white">Graffiello_v</span>
       </h2>
 
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
@@ -453,5 +453,6 @@
   </script>
 </body>
 </html>
+
 
 
