--- a/index.html
+++ b/index.html
@@ -265,11 +265,11 @@
             <div class="absolute inset-0 bg-gradient-to-t from-black/10 to-transparent"></div>
           </div>
           <div class="p-6">
-            <h3 class="text-xl font-extrabold text-white">graffiello_v (White)</h3>
+            <h3 class="text-xl font-extrabold text-white">Graffiello_v (White)</h3>
             <p class="mt-2 text-sm text-gray-400">Clean grid, high contrast, airy spacing. Cocok untuk brand yang ingin tampil rapi & presisi.</p>
             <div class="mt-4 flex gap-3">
               <a id="collabGoWhite"
-                 class="px-4 py-2 rounded-lg bg-white text-black text-sm font-semibold hover:opacity-90 cursor-pointer">Explore White</a>
+                 class="px-4 py-2 rounded-lg bg-white/10 hover:bg-white/20 text-sm cursor-pointer">Explore White</a>
             </div>
           </div>
         </div>
@@ -453,6 +453,7 @@
   </script>
 </body>
 </html>
+
 
 
 
