--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
       <div class="mt-6 rounded-3xl border border-white/10 bg-black/40 backdrop-blur-xl p-5">
         <div class="grid grid-cols-2 gap-4">
           <div class="rounded-xl overflow-hidden border border-white/10 bg-white/[0.03]">
-            <img src="images/foto-profile-hero.jpg" class="w-full h-40 object-cover" alt="Black preview">
+            <img src="images/dios.jpg" class="w-full h-40 object-cover" alt="Black preview">
           </div>
           <div class="rounded-xl overflow-hidden border border-white/10 bg-white">
             <img src="images/logo2.jpg" class="w-full h-40 object-cover" alt="White preview">
@@ -453,6 +453,7 @@
   </script>
 </body>
 </html>
+
 
 
 
