--- a/index.html
+++ b/index.html
@@ -10,6 +10,81 @@
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- === Tambahan: Animasi hero (BG gerak pelan) === -->
+  <style>
+    /* Zoom + rotate halus */
+    @keyframes km-zoomRotate {
+      0%   { transform: scale(1) rotate(0deg); }
+      50%  { transform: scale(1.08) rotate(0.6deg); }
+      100% { transform: scale(1) rotate(0deg); }
+    }
+    /* Sweep cahaya tipis */
+    @keyframes km-sweep {
+      0%   { transform: translateX(-120%) skewX(-12deg); opacity: 0; }
+      20%  { opacity: .6; }
+      50%  { transform: translateX(120%)  skewX(-12deg); opacity: 0; }
+      100% { opacity: 0; }
+    }
+    /* Noise halus */
+    @keyframes km-noise {
+      0%,100% { transform: translate3d(0,0,0) scale(1); }
+      50%     { transform: translate3d(-1%,1%,0) scale(1.02); }
+    }
+
+    /* Kurangi animasi jika user pilih Reduce Motion */
+    @media (prefers-reduced-motion: reduce) {
+      .km-hero__bg,
+      .km-hero__sweep,
+      .km-hero__noise { animation: none !important; }
+    }
+
+    .km-hero { position: relative; isolation: isolate; overflow: hidden; }
+    .km-hero__bg{
+      position:absolute; inset:0;
+      background: url('images/Background.jpg') center/cover no-repeat;
+      will-change: transform, filter;
+      animation: km-zoomRotate 18s ease-in-out infinite;
+      transform-origin: center;
+      opacity:.9;
+      filter: url(#warp-1);
+    }
+    .km-hero__vignette{
+      position:absolute; inset:-10%;
+      background:
+        radial-gradient(1200px 600px at 50% 40%, rgba(255,255,255,.10), transparent 60%),
+        radial-gradient(900px 420px at 50% -10%, rgba(255,255,255,.08), transparent 55%),
+        linear-gradient(#00000080, #00000080);
+      pointer-events:none;
+    }
+    .km-hero__sweep{
+      position:absolute; inset:-20% 0;
+      background: linear-gradient(90deg, transparent, rgba(255,255,255,.18), transparent);
+      mix-blend-mode: screen;
+      filter: blur(8px);
+      animation: km-sweep 7.5s ease-in-out infinite;
+      pointer-events:none;
+    }
+    .km-hero__noise{
+      position:absolute; inset:-5%;
+      background-image: url("data:image/svg+xml;utf8,\
+        <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 140 140'>\
+        <filter id='n'><feTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='2' stitchTiles='stitch'/><feColorMatrix type='saturate' values='0'/><feComponentTransfer><feFuncA type='table' tableValues='0 0 .06 0'/></feComponentTransfer></filter>\
+        <rect width='100%' height='100%' filter='url(%23n)'/></svg>");
+      background-size: 200px 200px;
+      opacity:.5; mix-blend-mode: overlay;
+      animation: km-noise 6s steps(2,end) infinite;
+      pointer-events:none;
+    }
+  </style>
+
+  <!-- SVG filter kecil untuk ripple/warp ringan -->
+  <svg width="0" height="0" style="position:absolute">
+    <filter id="warp-1">
+      <feTurbulence type="fractalNoise" baseFrequency="0.0025 0.0065" numOctaves="2" seed="4"/>
+      <feDisplacementMap in="SourceGraphic" scale="4"/>
+    </filter>
+  </svg>
 </head>
 <body class="bg-black text-gray-200 font-sans">
 
@@ -465,9 +540,3 @@
   </script>
 </body>
 </html>
-
-
-
-
-
-
