--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     /* Sunbrush tajam di ujung kiri/kanan logo (putih saja) – DI-MASK ke logo */
     .km-sunbrush,
     .km-outline-sweep{position:absolute;inset:0;mix-blend-mode:screen;pointer-events:none;
-      -webkit-mask-image:url('images/Background.jpg');mask-image:url('images/Background.jpg');
+      -webkit-mask-image:url('images/logohd.png');mask-image:url('images/Background.jpg');
       -webkit-mask-repeat:no-repeat;mask-repeat:no-repeat;
       -webkit-mask-position:center 46%;mask-position:center 46%;
       -webkit-mask-size:contain;mask-size:contain}
@@ -344,3 +344,4 @@
   </script>
 </body>
 </html>
+
