--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     /* Sunbrush tajam di ujung kiri/kanan logo (putih saja) – DI-MASK ke logo */
     .km-sunbrush,
     .km-outline-sweep{position:absolute;inset:0;mix-blend-mode:screen;pointer-events:none;
-      -webkit-mask-image:url('images/logohd.png');mask-image:url('images/Background.jpg');
+      -webkit-mask-image:url('images/logo_hd.png');mask-image:url('images/logo_hd.png');
       -webkit-mask-repeat:no-repeat;mask-repeat:no-repeat;
       -webkit-mask-position:center 46%;mask-position:center 46%;
       -webkit-mask-size:contain;mask-size:contain}
@@ -121,8 +121,8 @@
     <!-- LOGO FX (semua efek hanya di logo) -->
     <div class="km-logoWrap">
       <div class="km-logoBox">
-        <img src="images/Background.jpg" alt="" class="km-logo-img" aria-hidden="true">
-        <img src="images/Background.jpg" alt="" class="km-logo-glow" aria-hidden="true">
+        <img src="images/logo_hd.png" alt="" class="km-logo-img" aria-hidden="true">
+        <img src="images/logo_hd.png" alt="" class="km-logo-glow" aria-hidden="true">
         <div class="km-sunbrush" aria-hidden="true"></div>
         <div class="km-outline-sweep" aria-hidden="true"></div>
       </div>
@@ -344,4 +344,5 @@
   </script>
 </body>
 </html>
+
 
